Add a GUI settings for useRightMiddleTabletButtonWorkaround

Some tablet devices don't pass barrel-button clicks via tablet API.
If you have such a device, you can try activate this workaround.
Krita will try to read right- and middle-button clicks from the
mouse events stream. It may or may not work on your device
(depends on the tablet driver implementation).

BUG:399585
CC:kimageshop@kde.org